--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tic-tac-toe game</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,6 +12,55 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1>Welcome to the game!</h1>
+
+      <P id="message"></P>
+    <form id="sign-up" class="border">
+      <fieldset>
+      <legend>Sign up:</legend>
+<input name ="credentials[email]" type="text" placeholder="Email">
+<input name ="credentials[password]" type="password" placeholder="Password">
+<input name ="credentials[password_confirmation]" type="password" placeholder="Confirm password">
+<input type="submit" value="Sign up!">
+      </fieldset>
+    </form>
+
+    <form id="sign-in" class="border">
+      <fieldset>
+      <legend>Sign in:</legend>
+<input name ="credentials[email]" type="text" placeholder="Email">
+<input name ="credentials[password]" type="password" placeholder="Password">
+<input type="submit" value="Sign in">
+      </fieldset>
+    </form>
+
+          <form id="change-password" class="border">
+            <fieldset>
+            <legend>Password change:</legend>
+    <input name ="passwords[old]" type="password" placeholder="Old Password">
+    <input name ="passwords[new]" type="password" placeholder="New Password">
+    <input type="submit" value="Change password">
+            </fieldset>
+          </form>
+
+          <form id="log-out" class="border">
+            <fieldset>
+            <legend>Log out!</legend>
+    <input type="submit" value="Logout">
+            </fieldset>
+          </form>
+
+      <main>
+        <div class="row1">box1</div>
+        <div class="row1">box2</div>
+        <div class="row1">box3</div>
+        <div class="row2">box4</div>
+        <div class="row2">box5</div>
+        <div class="row2">box6</div>
+        <div class="row3">box7</div>
+        <div class="row3">box8</div>
+        <div class="row3">box9</div>
+
+      </main>
     </body>
 </html>
