--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
       <h1>Welcome to the game!</h1>
 
-      <P id="message">Message:</P>
+      <h2 id="message">Message:</h2>
     <form id="sign-up" class="border">
       <fieldset>
       <legend>Sign up:</legend>
@@ -52,24 +52,15 @@
           </form>
 
       <main>
-        <div class="row1 box" id='box1'>
-          <img class="hidden"> <p> </p></div>
-        <div class="row1 box" id='box2'>
-          <img class="hidden"> <p> </p></div>
-        <div class="row1 box" id='box3'>
-          <img class="hidden"> <p> </p></div>
-        <div class="row2 box" id='box4'>
-          <img class="hidden"> <p> </p></div>
-        <div class="row2 box" id='box5'>
-          <img class="hidden"> <p> </p></div>
-        <div class="row2 box" id='box6'>
-          <img class="hidden"> <p> </p></div>
-        <div class="row3 box" id='box7'>
-          <img class="hidden"> <p> </p></div>
-        <div class="row3 box" id='box8'>
-          <img class="hidden"> <p> </p></div>
-        <div class="row3 box" id='box9'>
-          <img class="hidden"> <p> </p></div>
+        <div class="row1 box" id='0'></div>
+        <div class="row1 box" id='1'></div>
+        <div class="row1 box" id='2'></div>
+        <div class="row2 box" id='3'></div>
+        <div class="row2 box" id='4'></div>
+        <div class="row2 box" id='5'></div>
+        <div class="row3 box" id='6'></div>
+        <div class="row3 box" id='7'></div>
+        <div class="row3 box" id='8'></div>
 
       </main>
     </body>
