--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link href="https://fonts.googleapis.com/css?family=Noticia+Text|Permanent+Marker&display=swap" rel="stylesheet">
+
       <title>Tic-tac-toe game</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -10,14 +12,15 @@
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+
     </head>
     <body>
       <h1>Welcome to the game!</h1>
 
-      <h2 id="message">Message:</h2>
-    <form id="sign-up" class="border">
+    <nav>
+    <form class="float-left first" id="sign-up">
       <fieldset>
-      <legend>Sign up:</legend>
+      <!-- <legend>Sign up:</legend> -->
 <input name ="credentials[email]" type="text" placeholder="Email">
 <input name ="credentials[password]" type="password" placeholder="Password">
 <input name ="credentials[password_confirmation]" type="password" placeholder="Confirm password">
@@ -25,33 +28,35 @@
       </fieldset>
     </form>
 
-    <form id="sign-in" class="border">
+    <form class="float-left first" id="sign-in">
       <fieldset>
-      <legend>Sign in:</legend>
+      <!-- <legend>Sign in:</legend> -->
 <input name ="credentials[email]" type="text" placeholder="Email">
 <input name ="credentials[password]" type="password" placeholder="Password">
-<input type="submit" value="Sign in">
+<input type="submit" value="Sign in" class="first">
 
       </fieldset>
     </form>
 
-          <form id="change-password" class="border">
+          <form class="float-right second" id="change-password">
             <fieldset>
-            <legend>Password change:</legend>
+            <!-- <legend>Password change:</legend> -->
     <input name ="passwords[old]" type="password" placeholder="Old Password">
     <input name ="passwords[new]" type="password" placeholder="New Password">
-    <input type="submit" value="Change password">
+    <input type="submit" value="Change password" class="second">
             </fieldset>
           </form>
 
-          <form id="log-out" class="border">
+          <form class="float-right" id="log-out">
             <fieldset>
-            <legend>Log out!</legend>
-    <input type="submit" value="Logout">
+            <!-- <legend>Log out!</legend> -->
+    <input type="submit" value="Logout" class="second">
             </fieldset>
           </form>
+  </nav>
+  <h2 id="message">message:</h2>
 
-      <main>
+      <main class="second">
         <div class="row1 box" id='0'></div>
         <div class="row1 box" id='1'></div>
         <div class="row1 box" id='2'></div>
