--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>Welcome to the game!</h1>
 
     <nav>
-    <form class="float-left first" id="sign-up">
+    <form class="float-left viewStart" id="sign-up">
       <fieldset>
       <!-- <legend>Sign up:</legend> -->
 <input name ="credentials[email]" type="text" placeholder="Email">
@@ -28,35 +28,35 @@
       </fieldset>
     </form>
 
-    <form class="float-left first" id="sign-in">
+    <form class="float-left viewStart" id="sign-in">
       <fieldset>
       <!-- <legend>Sign in:</legend> -->
 <input name ="credentials[email]" type="text" placeholder="Email">
 <input name ="credentials[password]" type="password" placeholder="Password">
-<input type="submit" value="Sign in" class="first">
+<input type="submit" value="Sign in">
 
       </fieldset>
     </form>
 
-          <form class="float-right second" id="change-password">
+          <form class="float-right viewLoggedIn" id="change-password">
             <fieldset>
             <!-- <legend>Password change:</legend> -->
     <input name ="passwords[old]" type="password" placeholder="Old Password">
     <input name ="passwords[new]" type="password" placeholder="New Password">
-    <input type="submit" value="Change password" class="second">
+    <input type="submit" value="Change password" class="viewLoggedIn">
             </fieldset>
           </form>
 
-          <form class="float-right" id="log-out">
+          <form class="float-right viewLoggedIn" id="log-out">
             <fieldset>
             <!-- <legend>Log out!</legend> -->
-    <input type="submit" value="Logout" class="second">
+    <input type="submit" value="Logout">
             </fieldset>
           </form>
   </nav>
-  <h2 id="message">message:</h2>
+  <h2 id="message">Please sign up and sign in!</h2>
 
-      <main class="second">
+      <main class="viewLoggedIn">
         <div class="row1 box" id='0'></div>
         <div class="row1 box" id='1'></div>
         <div class="row1 box" id='2'></div>
