--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
             </fieldset>
           </form>
   </nav>
-  <h2 id="message">Please sign up and sign in!</h2>
+  <h2 id="message">Please sign up and sign in to play</h2>
+  <button class="viewLoggedIn clickToCreate">New Game</button>
+  <button class="viewLoggedIn totalGames">Total Gameplays</button>
 
-      <main class="viewLoggedIn">
+      <main class="view-game">
         <div class="row1 box" id='0'></div>
         <div class="row1 box" id='1'></div>
         <div class="row1 box" id='2'></div>
