--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link href="https://fonts.googleapis.com/css?family=Noticia+Text|Permanent+Marker&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Inter|Noticia+Text|Permanent+Marker&display=swap" rel="stylesheet">
 
       <title>Tic-tac-toe game</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,6 +16,7 @@
     </head>
     <body>
       <h1>Welcome to the game!</h1>
+      <p id="signUpInOut">message</p>
 
     <nav>
     <form class="float-left viewStart" id="sign-up">
