--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
       <h1>Welcome to the game!</h1>
-      <p id="signUpInOut">message</p>
+      <p id="signUpInOut"></p>
 
     <nav>
     <form class="float-left viewStart" id="sign-up">
