--- a/index.html
+++ b/index.html
@@ -71,5 +71,8 @@
         <div class="row3 box" id='8'></div>
 
       </main>
+      <footer> by 7 ~^^~!
+        <!-- <p> by 7 ~^^~</p> -->
+      </footer>
     </body>
 </html>
